add useful exception handling